WriteRolesToUser endpoint + postmanfile
