# IAMApp/IAM/bin/Release/net5.0/swagger.json
@@ -122,7 +122,7 @@
             "in": "body",
             "name": "body",
             "schema": {
-              "$ref": "#/definitions/UserWithRoles"
+              "$ref": "#/definitions/UserName"
             }
           }
         ],
@@ -137,6 +137,20 @@
       "post": {
         "tags": [
           "UserManagement"
+        ],
+        "consumes": [
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "$ref": "#/definitions/UserWithRoles"
+            }
+          }
         ],
         "responses": {
           "200": {
